@@ -346,6 +346,133 @@ namespace QuantLib {
               )
               return false;
       }
+        
+        if (y == 2021) {
+            if (// Chatrapati Shivaji Jayanti
+                (d == 19 && m == February)
+                // Mahashivratri
+                || (d == 11 && m == March)
+                // Holi
+                || (d == 29 && m == March) 
+                // Gudi Padwa
+                || (d == 13 && m == April)
+                // Mahavir Jayanti
+                || (d == 14 && m == April)
+                // Ram Navami
+                || (d == 21 && m == April)
+                // Buddha Pournima
+                || (d == 26 && m == May)
+                // Bakri Id
+                || (d == 21 && m == July)
+                // Ganesh Chaturthi
+                || (d == 10 && m == September)
+                // Dasera
+                || (d == 15 && m == October)
+                // Id-E-Milad
+                || (d == 19 && m == October)
+                // Diwali - Balipratipada
+                || (d == 5 && m == November)
+                // Gurunank Jayanti
+                || (d == 19 && m == November))
+                return false;
+        }
+
+        if (y == 2022) {
+            if ( // Mahashivratri
+                (d == 1 && m == March)
+                // Holi
+                || (d == 18 && m == March)
+                // Ramzan Id
+                || (d == 3 && m == May)
+                // Buddha Pournima
+                || (d == 16 && m == May)
+                // Ganesh Chaturthi
+                || (d == 31 && m == August)
+                // Dasera
+                || (d == 5 && m == October)
+                // Diwali - Balipratipada
+                || (d == 26 && m == October)
+                // Gurunank Jayanti
+                || (d == 8 && m == November))
+                return false;
+        }
+
+        if (y == 2023) {
+            if ( 
+                // Holi
+                (d == 8 && m == March)
+                // Gudi Padwa
+                || (d == 22 && m == March)
+                // Ram Navami
+                || (d == 30 && m == March)
+                // Mahavir Jayanti
+                || (d == 4 && m == April)
+                // Buddha Pournima
+                || (d == 5 && m == May)
+                // Bakri Id
+                || (d == 28 && m == June)
+                // Ganesh Chaturthi
+                || (d == 19 && m == September)
+                // Id-E-Milad (estimated Wednesday 27th or Thursday 28th)
+                || (d == 28 && m == September)
+                // Dasera
+                || (d == 24 && m == October)
+                // Diwali - Balipratipada
+                || (d == 14 && m == November)
+                // Gurunank Jayanti
+                || (d == 27 && m == November))
+                return false;
+        }
+
+        if (y == 2024) {
+            if ( // Chatrapati Shivaji Jayanti
+                (d == 19 && m == February)
+                // Mahashivratri
+                || (d == 8 && m == March)
+                // Holi
+                || (d == 25 && m == March)
+                // Gudi Padwa
+                || (d == 9 && m == April)
+                // Ram Navami
+                || (d == 17 && m == April)
+                // Mahavir Jayanti
+                || (d == 21 && m == April)
+                // Buddha Pournima
+                || (d == 23 && m == May)
+                // Bakri Id (estimated Sunday 16th or Monday 17th)
+                || (d == 17 && m == June)
+                // Ganesh Chaturthi
+                || (d == 27 && m == August)
+                // Id-E-Milad (estimated Sunday 15th or Monday 16th)
+                || (d == 16 && m == September)
+                // Gurunank Jayanti
+                || (d == 15 && m == November))
+                return false;
+        }
+
+        if (y == 2025) {
+            if ( // Chatrapati Shivaji Jayanti
+                (d == 19 && m == February)
+                // Mahashivratri
+                || (d == 26 && m == February)
+                // Holi
+                || (d == 14 && m == March)
+                // Ramzan Id (estimated Sunday 30th or Monday 31st)
+                || (d == 31  && m == March)
+                // Mahavir Jayanti
+                || (d == 10 && m == April)
+                // Buddha Pournima
+                || (d == 12 && m == May)
+                // Id-E-Milad (estimated Thursday 4th or Friday 5th)
+                || (d == 5 && m == September)
+                // Dasera
+                || (d == 2 && m == October)
+                // Diwali - Balipratipada
+                || (d == 22 && m == October)
+                // Gurunank Jayanti
+                || (d == 5 && m == November))
+                return false;
+        }
 
         return true;
     }
