@@ -44,7 +44,7 @@ namespace QuantLib {
         </ul>
 
         Other holidays for which no rule is given
-        (data available for 2005-2014 only:)
+        (data available for 2005-2014, 2019-2025 only:)
         <ul>
         <li>Bakri Id</li>
         <li>Moharram</li>
